--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,9 +22,10 @@
   },
   "rules": {
     "react/react-in-jsx-scope": "off",
-    "react/jsx-filename-extension": ["warn", { "extensions": [".ts", ".tsx"] }],
+    "react/jsx-props-no-spreading": "off",
+    "jsx-a11y/no-noninteractive-element-interactions": "off",
     "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
     "jsx-a11y/label-has-associated-control": "off",
-    "react/jsx-props-no-spreading": "off"
+    "react/jsx-filename-extension": ["warn", { "extensions": [".ts", ".tsx"] }]
   }
 }
