--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "antd": "^5.23.4",
     "next": "15.1.6",
     "react": "^19.0.0",
+    "react-daum-postcode": "^3.2.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-modal": "^3.16.3",
     "styled-components": "^6.1.15",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
@@ -27,6 +29,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-modal": "^3.16.3",
     "@types/styled-components": "^5.1.34",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
