--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.54.2",
     "react-modal": "^3.16.3",
     "styled-components": "^6.1.15",
+    "swiper": "^11.2.4",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
